--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ryan-build",
+  "name": "best-build",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "bin": {
-    "ryan-build": "bin/index.js"
+    "best-build": "bin/index.js"
   },
   "scripts": {
     "start": "node bin/index.js start",
